--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.5.1",
-    "prisma": "^5.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "prisma": "^5.1.1"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1"
+    "@prisma/client": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
